# encrypted-p2p-chat

./: ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  CRYPTOGRAPHY.md  FEATURES.md  PROTOCOLS.md  README.md  USAGE.md
include/: anonymous_routing.h  attribute_based_encryption.h  blockchain_identity.h  confidential_transactions.h  dao_governance.h  differential_privacy.h  double_ratchet.h  fhe_engine.h  group_chat.h  homomorphic_encryption.h  mesh_network.h  metadata_protection.h  mpc_wallet.h  pir.h  post_quantum_crypto.h  pq3_protocol.h  private_contact_sync.h  quantum_key_distribution.h  ring_signatures.h  sdjwt.h  secure_authentication.h  secure_browser.h  secure_calendar.h  secure_cloud_storage.h  secure_conference.h  secure_cryptocurrency.h  secure_drop.h  secure_enclave.h  secure_file_sharing.h  secure_file_transfer.h  secure_identity_management.h  secure_messaging.h  secure_messaging_v2.h  secure_notes.h  secure_tasks.h  secure_vault.h  secure_video_conferencing.h  secure_voice_video_v2.h  secure_voting.h  steganography.h  (+5 more)
src/: main.cpp
src/credentials/: blockchain_identity.cpp  mpc_wallet.cpp  sdjwt.cpp
src/crypto/: attribute_based_encryption.cpp  confidential_transactions.cpp  double_ratchet.cpp  post_quantum_crypto.cpp  quantum_key_distribution.cpp  ring_signatures.cpp  threshold_signatures.cpp  zero_knowledge_proofs.cpp
src/enclave/: dao_governance.cpp  pq3_protocol.cpp  secure_enclave.cpp  tls_handshake.cpp
src/governance/: secure_voting.cpp
src/network/: anonymous_routing.cpp  group_chat.cpp  mesh_network.cpp  secure_authentication.cpp  secure_browser.cpp  secure_calendar.cpp  secure_cloud_storage.cpp  secure_conference.cpp  secure_cryptocurrency.cpp  secure_drop.cpp  secure_file_sharing.cpp  secure_file_transfer.cpp  secure_identity_management.cpp  secure_messaging.cpp  secure_messaging_v2.cpp  secure_notes.cpp  secure_tasks.cpp  secure_vault.cpp  secure_video_conferencing.cpp  secure_voice_video_v2.cpp  video_encryption.cpp  voice_encryption.cpp
src/privacy/: differential_privacy.cpp  fhe_engine.cpp  homomorphic_encryption.cpp  metadata_protection.cpp  pir.cpp  private_contact_sync.cpp  steganography.cpp
